@@ -340,6 +340,7 @@ const char* Notification_Type_Desc(const int nType, const unsigned char snum)
 		{ NTYPE_TEMPERATURE, "Temperature", "T" },
 		{ NTYPE_HUMIDITY, "Humidity", "H" },
 		{ NTYPE_RAIN, "Rain", "R" },
+		{ NTYPE_RAINRATE, "Rain Rate", "RR" },
 		{ NTYPE_UV, "UV", "U" },
 		{ NTYPE_WIND, "Wind", "W" },
 		{ NTYPE_USAGE, "Usage", "M" },
@@ -378,6 +379,7 @@ const char* Notification_Type_Label(const int nType)
 		{ NTYPE_TEMPERATURE, "degrees" },
 		{ NTYPE_HUMIDITY, "%" },
 		{ NTYPE_RAIN, "mm" },
+		{ NTYPE_RAINRATE, "mm/h" },
 		{ NTYPE_UV, "UVI" },
 		{ NTYPE_WIND, "m/s" },
 		{ NTYPE_USAGE, "" },
