@@ -231,6 +231,7 @@ enum _eNotificationTypes
 	NTYPE_TEMPERATURE = 0,
 	NTYPE_HUMIDITY,
 	NTYPE_RAIN,
+	NTYPE_RAINRATE,
 	NTYPE_UV,
 	NTYPE_WIND,
 	NTYPE_USAGE,
