@@ -5,6 +5,7 @@ Version 2025.xxxx
 - Implemented: MQTT-AD, added support for IR Blaster (Tuya iH-F8260)
 - Implemented: MQTT-AD, handling battery low boolean sensors
 - Implemented: MQTT-AD, allow publishing messages
+- Implemented: Rain Rate notification
 - Implemented: Support for Humidity only graph
 - Fixed: MQTT-AD, fix issue where brightness and RGB command topic are different
 - Fixed: MQTT-AD, preserve select options when updating a device
